--- a/home.css
+++ b/home.css
@@ -1,3 +1,27 @@
+.qr {
+  width: 108px;
+  height: 131px;
+  position: fixed;
+  bottom: 32px;
+  right: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  box-shadow: 0px 6px 12px 0px #00265433;
+
+  
+}
+.qr img {
+  width: 84px;
+  height: 84px;
+}
+.qr p {
+  font-size: 11px;
+  font-weight: 500
+}
+
 .logo-container {
   border-bottom: 1px solid #D4DCE2;
   margin-bottom: 28px;
@@ -26,7 +50,6 @@
   width: 25px;
   height: 25px;
 }
-
 .main-page {
   display: flex;
   flex-direction: column;
@@ -37,7 +60,6 @@
   background-image: url('./img/top-img.jpeg');
   background-size: cover;
   background-position: center;
-  height: 672px;
 }
 .top-add-content-container {
   display: flex;
@@ -55,21 +77,20 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 100px auto 0 auto;
-  max-width: 1440px;
   align-items: center;
-  width: 100%;
 }
 .sophie-top-img-container {
   max-width: 549px;
   max-height: 347px;
+  position: relative;
+  margin-right: 85px;
 }
-.sophie-top-img {
+.sophie-top-img-container img {
   width: calc(300px + 17vw);
   height: calc(200px + 10vw);
   background-image: url('./img/swimming.jpeg');
   background-size: cover;
-  margin-right: 85px;
+  position: relative;
 }
 .sophie-content {
   width: calc(300px + 12vw);
@@ -79,7 +100,6 @@
   font-size: 40px;
   font-weight: 600;
   margin-bottom: 32px;
-  font-family: 'Montserrat';
 }
 .sophie-content h3{
   font-size: 18px;
@@ -136,8 +156,12 @@
 }
 
 .trust {
-  margin: 108px auto 0 auto;
-  max-width: 1440px;
+  position: relative;
+}
+.trust > img:nth-child(3) {
+  position: absolute;
+  top: 170px;
+  left: 0px;
   width: 100%;
 }
 .trust h2 {
@@ -149,10 +173,8 @@
 }
 .trust-box {
   display: flex;
-  max-width: 1110px;
   flex-wrap: wrap;
   justify-content: space-around;
-  width: 100%;
   margin: 0 auto;
 }
 .trust-box_item{
@@ -164,14 +186,16 @@
   margin-bottom: 30px;
 }
 .trust-box_item:nth-of-type(2),.trust-box_item:nth-of-type(4) {
-  margin-top: 41px;
+  margin-top: 40px;
+}
+.trust-box_item:nth-of-type(1),.trust-box_item:nth-of-type(3) {
+ z-index: 1;
 }
 .trust-box_item p {
   width: 194px;
   text-align: center;
   font-weight: 300;
   font-size: 18px;
-  font-family: "Montserrat";
 }
 .trust-box_item-content::before {
   content: '';
@@ -190,7 +214,6 @@
 
 .iphone {
   width: 100%;
-  height:580px;
   margin-top: 100px;
   position: relative;
 }
@@ -200,11 +223,12 @@
   height: 580px;
   right: 18vw;
   z-index: 2;
+  top: -10px;
 }
 .iphone-content {
   background-color: #F2F7FA;
-  height: 503px;
   margin-top: 45px;
+  height: 503px;
 }
 .iphone-content_item{
   width: 38.5vw;
@@ -214,7 +238,6 @@
 .iphone-content_item h3 {
   width: 31.8vw;
   font-size: 24px;
-  font-weight: 400;
   margin-bottom: 34px;
   font-family: 'Source Han Sans SC';
 }
@@ -226,6 +249,7 @@
 }
 .iphone-content_item-qr {
   display: flex;
+  padding-bottom: 80px;
 }
 .iphone-content_item-qr img {
   width: 133px;
@@ -245,9 +269,14 @@
   font-weight: 300;
   font-family: 'Source Han Sans SC';
 }
+.iphone-content_item-qr-content img{
+  width: 26px;
+  height: 26px;
+  margin-top: 12.66px;
+}
 
 .brand {
-  margin-top: 68px;
+  margin-top: 100px;
 }
 .brand h2 {
   font-size: 40px;
@@ -258,7 +287,7 @@
 }
 .brand-box {
   display: flex;
-  max-width: 1110px;
+  max-width: 1100px;
   flex-wrap: wrap;
   width: 100%;
   margin: 0 auto;
@@ -273,22 +302,12 @@
   height: 85px;
   margin: 0 auto;
 }
-.button-big {
-  width: 180px;
-  height: 52px;
-  margin: 0 auto;
-  border: 1px solid black;
-  font-size: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 .meet {
-  max-width: 1110px;
   margin: 0 auto;
   margin-top: 100px;
   position: relative;
+
 }
 .meet-box-up {
   position: absolute;
@@ -323,12 +342,10 @@
   font-size: 40px;
   font-weight: 300;
   margin-bottom: 27px;
-  font-family: 'Montserrat';
 }
 .meet-box-bottom_content h3 {
   font-size: 18px;
   margin-top: 27px;
-  font-family: 'Montserrat';
 }
 .meet-box-bottom_content p:nth-child(3) {
   margin-top: 20px;
@@ -356,33 +373,26 @@
   margin-top: 64px;
   position: relative;
 }
-.meet-box-up {
-  position: absolute;
-  width: calc(784px + 16vw);
-  height: calc(384px + 17.15vw);
-  border: 1px dashed #002654;
-  z-index: 2;
-}
 .meet-box-bottom {
   position: relative;
   top: 16px;
   left: 16px;
   width: calc(784px + 16vw);
-  height: calc(384px + 17.15vw);
   background-color: #F2F7FA;
   display: flex;
 }
-
 .news {
-  width: 100%;
-  max-width: 1440px;
-  margin: 100px auto 0 auto;
+  margin-top: 100px;
   position: relative;
+  background: #F2F7FA;
+  padding: 60px 15px 0 15px;
 }
 .news-title {
   text-align: center;
   font-family: 'Source Han Sans SC';
   font-size: 40px;
+  z-index: 2;
+  position: relative;
 }
 .news-title::after {
   content: '';
@@ -394,25 +404,419 @@
   height: 22px;
   width: 169px;
   z-index: -1;
+  top: 30px;
 }
 .news-content-container {
+  margin: 53px auto 0 auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 0 auto;
-  width: 100%;
 }
 .news-content {
   display: flex;
   flex-direction: column;
-  flex-basis: 33.33%;
+  width: 33%;
+  text-align: center;
+  margin-bottom: 43px;
+  justify-content: center;
+  align-items: center;
+}
+.img-container{
+  position: relative;
+  transition-timing-function: ease-in; 
+  transition-duration: 0.55s; 
+}
+.img-container:hover {
+  filter:drop-shadow(6px 6px 0px #002654);
+}
+.img-container:hover:after {
+  content: '标题';
+  position: absolute;
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
+  color: #000000;
 }
 .news-content img {
   width: 350px;
   height: 472px
 }
+.news-content img {
+  width: 350px;
+  height: 472px
+}
+.news-content p:nth-child(2) {
+  font-weight: 500;
+  font-size: 16px;
+  margin-top: 18px;
+}
+.news-content p:nth-child(3) {
+  font-size: 28px;
+  margin-bottom: 15px;
+}
+.news-content-container .news-content:nth-last-child(1) {
+  text-align: unset;
+  border: 1px solid black;
+  width: 32.8%;
+  height: 100%;
+  align-items: unset;
+}
+.news-content-container .news-content:nth-last-child(1) h3 {
+  font-size: 32px;
+  margin-top: 37px;
+  margin-left: 25px;
+  font-family: 'Source Han Sans SC';
+}
+.news-content-container .news-content:nth-last-child(1) p {
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 15px;
+  margin-left: 20px;
+}
+.news-content-container .news-content:nth-last-child(1) p:nth-last-child(2) {
 
+  margin-bottom: 35px;
+}
+.news-content-container .news-content:nth-last-child(1) .button-small {
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 15px;
+  margin-left: 20px;
+}
+
+.contact {
+  margin-top: 60px !important;
+  box-shadow: 4px 4px 0px #002654;
+}
+.contact-container {
+  border: 1px solid black;
+  padding: 80px 0;
+  display: flex;
+}
+.contact-left{
+  width: calc(300px + 17vw);
+  margin-left: 74px;
+  border-right: 1px solid #D4DCE2;
+  position: relative;
+}
+.contact-left h3 {
+  font-size: 60px;
+  font-weight: 700;
+  font-family: 'Source Han Sans SC';
+  margin-bottom: 16px;
+  position: relative;
+  z-index: 2;
+}
+.contact-left h3:after{
+  content:'';
+  position: absolute;
+  bottom: 0;
+  left:20%;
+  transform: translateX(-50%);
+  background-color: #FFF2D4;
+  height: 22px;
+  width: 169px; 
+  z-index: -1;
+}
+.contact-left p {
+  font-size: 18px;
+  font-weight: 300;
+  margin-bottom: 250px;
+  margin-right: 110px;
+  font-family: 'Source Han Sans SC';
+}
+.contact-left img {
+  width: 140px;
+  height: 45px;
+}
+form {
+  margin-left: 110px;
+}
+.contact-right_form-name input:nth-child(2) {
+  margin-left: 24px;
+}
+.input-margin {
+  margin-bottom: 16px;
+}
+input:focus {
+  background-color: #FFF2D4;
+}
+.contact-right_form-message input{
+  height: 112px;
+}
+.contact-right_form-name {
+  display: flex;
+}
+form .button-big {
+  margin: 48px 0 0 0;
+}
+
+.menu-bottom {
+  margin-top: 60px !important;
+  border: 1px solid #D4DCE2;
+}
+.menu-bottom-container {
+  display: flex;
+  margin: 30px auto 30px auto;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1110px;
+}
+.menu-bottom-img img {
+  width: 271px;
+  height: 87px
+}
+.menu-middle {
+  height: 72px;
+  display: flex;
+  align-items: center;
+  padding-bottom: 27px;
+  margin: 0 auto;
+  font-family: 'Source Han Sans SC';
+}
+.menu-end img{
+    width: 25px;
+    height: 25px;
+}
+
+.footer-container {
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1110px;
+}
+.footer {
+  margin-top: 0 !important;
+}
+.footer-item {
+  padding: 30px auto;
+}
+.footer-item p:nth-child(1) {
+  font-size: 24px;
+  font-family: 'Source Han Sans SC';
+  padding-top: 30px;
+}
+.footer-container .footer-item:nth-of-type(2) {
+  padding-left: 81px;
+  padding-right: 115px;
+}
+.footer-item p:nth-child(2) {
+  font-size: 18px;
+  font-weight: 300;
+  font-family: 'Source Han Sans SC';
+  padding-bottom: 30px;
+}
+.footer-item:nth-of-type(2) {
+  border-left: 1px solid #D4DCE2;
+  border-right: 1px solid #D4DCE2;
+}
+@media screen and (max-width: 1400px)  {
+  .iphone-content_item {
+    padding-top: 40px;
+  }
+}
+@media screen and (max-width: 1370px) {
+  /* .sophie {
+    margin: 50px 15px 0 15px;
+    align-items: center;
+  } */
+}
+@media screen and (max-width: 1300px) {
+  .iphone-img {
+    right: 10vw;
+  }
+  .iphone-content_item{
+    margin-left: 10vw;
+  }
+  .brand-box_item {
+    flex-basis: 33%;
+    margin: 0 auto 32px auto;
+  }
+  .meet {
+    display: none;
+  }
+  .meet-mobile {
+    display: block;
+    position: relative;
+  }
+  .meet-mobile-box-up {
+    width: calc(500px + 28vw);
+    background-color: #F2F7FA;
+  }
+  .meet-mobile-box-up_imgs {
+    display: flex;
+    justify-content: space-around;
+  }
+  .meet-mobile-box-up_imgs img:nth-child(1) {
+    width: 109px;
+    height: 143px;
+    margin: 20px 0px 32px 20px;
+  }
+  .meet-mobile-box-up_imgs img:nth-child(2) {
+    width: 36px;
+    height: 20px;
+    margin: 107px 0px 0px 0px;
+  }
+  .meet-mobile-box-up_imgs img:nth-child(3) {
+    width: 100px;
+    height: 100px;
+    margin-top: 39px;
+  }
+  .meet-mobile-box-up_content {
+    margin: 0 28px;
+  }
+  .meet-mobile-box-up_content h2 {
+    font-size: 24px;
+    font-weight: 300;
+    margin-bottom: 21px;
+  }
+  .meet-mobile-box-up_content h3 {
+    font-size: 13px;
+    font-weight: 700;
+    margin-bottom: 21px;
+  }
+  .meet-mobile-box-up_content p {
+    font-size: 13px;
+    font-weight: 300;
+    font-family: 'Source Han Sans SC';
+  }
+  .meet-mobile-box-up_content img {
+    width: 164px;
+    height: 73px;
+    margin: 32px auto 41px auto;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+@media screen and (max-width: 1200px) {
+  .contact-right {
+    margin: 0 50px;
+  }
+  form {
+    margin-left: 0px;
+  }
+  .contact-container {
+    flex-direction: column;
+    align-items: center;
+    margin: 0 50px;
+  }
+  .contact-left{
+    border-right: 0px solid #D4DCE2;
+  }
+  .contact-left img {
+    display: none;
+  }
+  .contact-left {
+    text-align: center;
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .contact-left p {
+    margin-bottom: 48px;
+    margin-right: 0;
+  }
+  .contact-right_form-name {
+    display: block;
+    width: 100%;
+  }
+  .contact-right_form-name input:nth-of-type(2) {
+    margin-left: 0;
+    margin-top: 16px;
+  }
+  form .button-big {
+    margin: 0 auto;
+  }
+  .contact-left h3:after{
+    left:50%;
+  }
+  .contact {
+    box-shadow: 0px 0px 0px #002654;
+  }
+  .menu-bottom-container {
+    flex-direction: column;
+  }
+  .menu-bottom-img img {
+    margin-top: 24px;
+  }
+
+}
+@media screen and (max-width: 1130px) {
+  .sophie-top-img-container img {
+    margin-right: 0;
+  }
+  .iphone-content_item h3 {
+    font-size: 15px;
+  }
+  .iphone-content_item > p {
+    font-size: 13px;
+  }
+  .iphone-img {
+    right: 5vw;
+  }
+  .iphone-content_item{
+    margin-left: 5vw;
+  }
+  .iphone-content_item-qr-content p:nth-child(1) {
+    font-size: 15px;
+  }
+  .iphone-content_item-qr-content p:nth-child(2) {
+    font-size: 16px;
+  }
+  .news-content {
+    width: 50%;
+  }
+  .news-content {
+    align-items: center;
+  }
+  .news-content-container .news-content:nth-last-child(1) {
+    width: 49.5%;
+  }
+  .brand h2 {
+    margin-top: 68px;
+  }
+  .footer-container {
+    flex-direction: column;
+    align-items: self-start;
+    padding-left: 50px;
+  }
+  .footer-item:nth-of-type(2) {
+    border-left: 0px solid #D4DCE2;
+    border-right: 0px solid #D4DCE2;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+  .footer-item p:nth-child(1) {
+    font-size: 15px
+  }
+  .footer-item p:nth-child(2) {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 969px) {
+  .sophie {
+    flex-direction: column;
+  }
+  .sophie-content h2{
+    margin-top: 32px;
+  }
+  .sophie-top-img-container {
+    margin-right: 0;;
+  }
+}
+@media screen and (max-width: 910px) {
+  .sophie-content h2{
+    margin-top: 32px;
+  }  
+}
 @media screen and (max-width: 768px) {
   header {
     position: relative;
@@ -460,7 +864,7 @@
   }
   .top-add {
     padding: 0 7px;
-    height: 172px;
+
     margin: 0 8px
   }
   .top-add-content-container {
@@ -472,16 +876,13 @@
     margin: 42px 0px 61px auto;
     width: 180px;
   }
-  .sophie-top-img {
+  .sophie-top-img-container img {
     width: calc(200px + 28.75vw);
     height: calc(100px + 26.5vw);
+    margin-right: 0;
   }
   .sophie-content {
     width: calc(200px + 28.75vw);
-    height: calc(200px + 10vw);
-  }
-  .sophie-top-img {
-    margin-right: 0;
   }
   .sophie-content h2{
     font-size: 20px;
@@ -524,84 +925,104 @@
     top: 220px;
   }
 }
-@media screen and (max-width: 910px) {
-  .sophie-content h2{
-    margin-top: 32px;
-  }  
-}
-@media screen and (max-width: 969px) {
-  .sophie {
-    flex-direction: column;
+@media screen and (max-width: 768px) {
+  .qr {
+    width: 90px;
+    height: 109px;
+    right: 15x;
   }
-  .sophie-content h2{
-    margin-top: 32px;
+  .iphone {
+    margin-top: 0;
   }
- 
-}
-@media screen and (max-width: 1140px) {
-  .meet {
-    display: none;
+  .iphone-content_item {
+    width: 60vw;
   }
-  .meet-mobile {
-    display: block;
-    position: relative;
+  .iphone-img {
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 383px;
+    width: 201px;
+    height: 404px;
+    margin-top: 72px;
+  }
+  .iphone-content_item {
+    margin: 48px auto 0 auto;
+  }
+  .iphone-content_item h3 {
+    margin-bottom: 24px;
+    width: unset;
+  }
+  .iphone-content {
+    height: 701px;
+    margin-top: 64px;
+  }
+  .iphone-content_item > p {
+    margin-bottom: 6px;
+  }
+  .iphone-content_item-qr {
+    justify-content: center;
+  }
+  .brand-box img {
+    width: 88px;
+    height: 48px;
+  }
+  .brand h2 {
+    font-size: 24px;
+    margin-bottom: 37.12px;
   }
   .meet-mobile-box-up {
     width: calc(200px + 28vw);
     background-color: #F2F7FA;
   }
-  .meet-mobile-box-up_imgs {
-    display: flex;
-    justify-content: space-around;
+  .news-content img {
+    width: 230px;
+    height: 284px;
   }
-  .meet-mobile-box-up_imgs img:nth-child(1) {
-    width: 109px;
-    height: 143px;
-    margin: 20px 0px 32px 20px;
+  .news-content p:nth-child(2) {
+    font-size: 12px;
   }
-  .meet-mobile-box-up_imgs img:nth-child(2) {
-    width: 36px;
-    height: 20px;
-    margin: 107px 0px 0px 0px;
+  .news-content p:nth-child(3) {
+    font-size: 18px;
   }
-  .meet-mobile-box-up_imgs img:nth-child(3) {
-    width: 100px;
-    height: 100px;
-    margin-top: 39px;
+  .contact-left h3{
+    font-size: 22px;
   }
-  .meet-mobile-box-up_content {
-    margin: 0 28px;
-  }
-  .meet-mobile-box-up_content h2 {
-    font-size: 24px;
-    font-weight: 300;
-    margin-bottom: 21px;
-    font-family: 'Montserrat';
-  }
-  .meet-mobile-box-up_content h3 {
+  .contact-left p{
     font-size: 13px;
-    font-weight: 700;
-    margin-bottom: 21px;
-    font-family: 'Montserrat';
+    width: calc(200px + 18.125vw);
+    margin: 0 auto 48px auto;
   }
-  .meet-mobile-box-up_content p {
-    font-size: 13px;
-    font-weight: 300;
-    font-family: 'Source Han Sans SC';
+  .contact-container {
+    margin: 0 15px;
+    box-shadow: 0px 0px 0px #002654;
+    padding-left: 15px;
+    padding-right: 15px;
   }
-  .meet-mobile-box-up_content img {
-    width: 164px;
-    height: 73px;
-    margin: 32px auto 41px auto;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
+  .contact-left h3:after{
+    height: 14px;
+    width: 121px; 
+    z-index: -1;
+  }
+}
+@media screen and (max-width: 500px) {
+  .news-content img {
+    width: 140px;
+    height: 171px;
+  }
+  .news-content-container .news-content:nth-last-child(1) {
+    width: 48.5%;
+  }
+  .news-content-container .news-content:nth-last-child(1) h3 {
+    font-size: 16px;
+  }
+  .news-content-container .news-content:nth-last-child(1) p {
+    font-size: 12px;
   }
 }
 @media screen and (max-width: 470px) {
   .sophie-left-img-container {
     width: calc(200px + 31vw);
-    height: calc(250px + 21.6vw);
     position: relative;
    
   }
@@ -638,90 +1059,27 @@
     width: calc(200px + 28vw);
     height: calc(150px + 17.18vw)
   }
-}
-@media screen and (max-width: 1370px) {
-  /* .sophie {
-    margin: 50px 15px 0 15px;
-    align-items: center;
-  } */
-}
-@media screen and (max-width: 1300px) {
-  .iphone-img {
-    right: 10vw;
+  .menu-bottom-img img{
+    width: 208px;
+    height: 67px;
+    margin-bottom: 48px;
   }
-  .iphone-content_item{
-    margin-left: 10vw;
-  }
-  .brand-box_item {
-    flex-basis: 33%;
-    margin: 0 auto 32px auto;
-  }
-}
-@media screen and (max-width: 1130px) {
-  .sophie-top-img {
-    margin-right: 0;
-  }
-  .iphone-content_item h3 {
-    font-size: 15px;
-  }
-  .iphone-content_item > p {
-    font-size: 13px;
-  }
-  .iphone-img {
-    right: 5vw;
-  }
-  .iphone-content_item{
-    margin-left: 5vw;
-  }
-  .iphone-content_item-qr-content p:nth-child(1) {
-    font-size: 15px;
-  }
-  .iphone-content_item-qr-content p:nth-child(2) {
+  .menu-bottom-container {
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     font-size: 16px;
   }
+  .menu-middle a {
+    display: inline-block;
+  }
 }
-@media screen and (max-width: 768px) {
-  .iphone {
-    margin-top: 0;
-  }
-  .iphone-content_item {
-    width: 90vw;
-  }
+@media screen and (max-width: 400px) {
   .iphone-img {
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    top: 383px;
-    width: 201px;
-    height: 404px;
-    margin-top: 32px;
-  }
-  .iphone-content_item {
-    margin: 48px auto 0 auto;
-  }
-  .iphone-content_item h3 {
-    margin-bottom: 24px;
-    width: unset;
-  }
-  .iphone-content {
-    height: 701px;
-    margin-top: 64px;
-  }
-  .iphone-content_item > p {
-    margin-bottom: 6px;
-  }
-  .iphone-content_item-qr {
-    justify-content: center;
-  }
-  .brand {
-    margin-top: 300px;
-  }
-  .brand-box img {
-    width: 88px;
-    height: 48px;
+    margin-top: 90px;
   }
   .brand h2 {
-    font-size: 24px;
-    margin-bottom: 37.12px;
+    margin-top: 54px;
   }
 }
